--- a/Templates/home.html
+++ b/Templates/home.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1> HELLO </h1>
+<h1>
+    {% if user.is_authenticated%}
+    {{ user.username}}
+    {% endif %}
+</h1>
 {% endblock content%}
