--- a/Templates/signin.html
+++ b/Templates/signin.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {%block link%}
+{% load static %}
+
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -7,10 +9,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Nunito:600,700,900" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'css\users.css' %}"/>
 
 {%endblock%}
 {%block content%}
-{% load static %}
 {%for messsage in messages %}
 <h3>{{ messsage }}</h3>
 {% endfor %}
@@ -30,7 +32,6 @@
       <button type="submit" id="button" class="btn btn-primary deep-purple btn-block ">Submit</button>
   
       <br>
-    {% comment %}
       <div id="btn" class="text-center">
         <button type="button" class="btn btn-primary btn-circle btn-sm"><i class="fa fa-facebook"></i></button>
         <a href="{% url 'social:begin' 'google-oauth2' %}">
@@ -42,10 +43,8 @@
       <p>Don't have an account?<a href="{% url 'signup' %}"> Sign Up</a></p>
     </span>
     <span>
-      <p>Forgot password?<a href="{% url 'reset_password' %}"> reset</a></p>
+     {% comment %}<p>Forgot password?<a href="{% url 'reset_password' %}"> reset</a></p> {% endcomment %}
     </span>
-    {% endcomment %}
-
     </form>
   </div>
 <div>
