--- a/Templates/signup.html
+++ b/Templates/signup.html
@@ -21,7 +21,7 @@
     <div class="card-body">
       <h2 class="text-center">Sign Up</h2>
       <br>
-      <form action="{% url 'register' %}" method='POST'>
+      <form action="{% url 'signup' %}" method='POST'>
         {% csrf_token %}
         {%for field in form %}
         <div class="form-group">
@@ -31,7 +31,6 @@
         <button type="submit" id="button" class="btn btn-primary deep-purple btn-block ">Submit</button>
     
         <br>
-      
         <div id="btn" class="text-center">
           <button type="button" class="btn btn-primary btn-circle btn-sm"><i class="fa fa-facebook"></i></button>
           <a href="{% url 'social:begin' 'google-oauth2' %}">
