--- a/Templates/base.html
+++ b/Templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css\users.css' %}"/>
 
     {% block link%}
-    {% endblock %}
+    {% endblock link%}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -16,7 +16,7 @@
     <div class="container">
         <h1>HeLLO</h1>
         {% block content%}
-        {% endblock %}
+        {% endblock content%}
     </div>
     
 
