--- a/Templates/profile.html
+++ b/Templates/profile.html
@@ -1,13 +1,43 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+{% load static %}
+{% block link %}
+<link rel="stylesheet" href="{% static 'css/ajide.css' %}">
+{% endblock link %}
 {% block content %}
-    <div class="content-section">
-      <div class="media">
-        {% comment %}<img class="rounded-circle account-img" src="{{ user.profile.image.url }}">{% endcomment %}
-        <div class="media-body">
-          <h2 class="account-heading">{{ user.username }}</h2>
-          <p class="text-secondary">{{ user.email }}</p>
-        </div>
+  <body class="text-center" style="background-image: url('/static/css/f.jpg');">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+
       </div>
-      <!-- FORM HERE -->
+      <div class="col-sm midb">
+        <form class="form-signin" method="GET">
+            <h1 class="h3 mb-3 font-weight-normal"></h1>
+
+            <div class="input-group">
+              <input type="text" name="location" class="form-control text-center" placeholder="Enter City Name" required>
+              <div class="input-group">
+                <button class="btn btn-outline-secondary" type="submit">Check</button>
+              </div>
+              <div class="col-lg-12">
+                <span>
+                  <p class="weat">{{ weather_condition }}</p>
+                  <p class="desc">{{ weather_description }}</p>
+                  <p class="cou">{{ country }}</p>
+                  <p class="cit">{{ city }}</p>
+                  <p><b>{{ temp }}</b>&nbsp;&nbsp;<b>{{ base }}</b></p>
+
+                </span>
+              </div>
+            </div>
+
+          <p class="mt-5 mb-3 text-muted"><a href="https://www.github.com/JiboGithub">&copy; Designed by Ajide Habeeb - 2020</a></p>
+          </form>
+      </div>
+      <div class="col-sm">
+
+      </div>
     </div>
+</div>
+  </body>
 {% endblock content %}
