--- a/Templates/profile.html
+++ b/Templates/profile.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static 'css/ajide.css' %}">
 {% endblock link %}
 {% block content %}
-  <body class="text-center" style="background-image: url('/static/css/f.jpg');">
+  <body class="text-center" style="background-image: url('/static/images/farmer.jpg');">
   <div class="container">
     <div class="row">
       <div class="col-sm">
@@ -21,11 +21,12 @@
               </div>
               <div class="col-lg-12">
                 <span>
-                  <p class="weat">{{ weather_condition }}</p>
-                  <p class="desc">{{ weather_description }}</p>
-                  <p class="cou">{{ country }}</p>
-                  <p class="cit">{{ city }}</p>
-                  <p><b>{{ temp }}</b>&nbsp;&nbsp;<b>{{ base }}</b></p>
+                  <p class="weat">{{ context.weather_condition }}</p>
+                  <p class="desc">{{ context.weather_description }}</p>
+                  <p class="cou">{{ context.country }}</p>
+                  <p class="cit">{{ context.city }}</p>
+                  <p><b>{{ context.temp }}</b>&nbsp;&nbsp;<b>{{ context.base }}</b></p>
+                  <p>{{outcome.description}}</p>
 
                 </span>
               </div>
