--- a/Templates/base.html
+++ b/Templates/base.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css\users.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css\homepage.css' %}"/>
+
 
     {% block link%}
     {% endblock link%}
@@ -13,23 +15,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <nav>
-            <a href="homepage.html"><img src="{% static 'images/Agric-1.png' %}" alt="logo" class="logo"></a> 
-             <ul id="sidemenu">
-                 <li><a href="#header">Home</a></li>
-                 <li><a href="#Ghana">Agric in Ghana</a></li>
-                 <li><a href="#practices">Practices</a></li>
-                 <li><a href="#expectation">Expectations</a></li>
-                 <li><a href="{% url 'signup' %}">Sign Up</a></li>
-                 <li><a href="{% url 'login' %}">Login</a></li>
-                 <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
-             </ul>
-             <i class="fa-solid fa-bars" onclick="openmenu()"></i> 
-         </nav>
         {% block content%}
         {% endblock content%}
-    </div>
     
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
