--- a/Templates/signin.html
+++ b/Templates/signin.html
@@ -16,37 +16,46 @@
 {%for messsage in messages %}
 <h3>{{ messsage }}</h3>
 {% endfor %}
-
-<div id="login-card" class="card">
-  <div class="card-body">
-    <h2 class="text-center">Login form</h2>
-    <br>
-    <form action="{% url 'login' %}" method='POST'>
-      {% csrf_token %}
-      <div class="form-group">
-        <input type="text" class="form-control" id="username" placeholder="username" name="username">
-      </div>
-        <div class="form-group">
-          <input type="password" class="form-control" id="email" placeholder="Enter password" name="password">
-        </div>
-      <button type="submit" id="button" class="btn btn-primary deep-purple btn-block ">Submit</button>
-  
+<body class="text-center" style="
+  background-image: url('/static/images/work4.jpg');
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  ">
+  <div class="container-fluid set-margin">
+  <div id="login-card" class="card">
+    <div class="card-body">
+      <h2 class="text-center">Login form</h2>
       <br>
-      <div id="btn" class="text-center">
-        <button type="button" class="btn btn-primary btn-circle btn-sm"><i class="fa fa-facebook"></i></button>
-        <a href="{% url 'social:begin' 'google-oauth2' %}">
-          <button type="button" class="btn btn-danger btn-circle btn-sm"><i class="fa fa-google"></i></button>
-        <button type="button" class="btn btn-info btn-circle btn-sm"><i class="fa fa-twitter"></i></button>  
-    </div>
+      <form action="{% url 'login' %}" method='POST'>
+        {% csrf_token %}
+        <div class="form-group">
+          <input type="text" class="form-control" id="username" placeholder="username" name="username">
+        </div>
+          <div class="form-group">
+            <input type="password" class="form-control" id="email" placeholder="Enter password" name="password">
+          </div>
+        <button type="submit" id="button" class="btn btn-primary deep-purple btn-block ">Submit</button>
     
-    <span>
-      <p>Don't have an account?<a href="{% url 'signup' %}"> Sign Up</a></p>
-    </span>
-    <span>
-     {% comment %}<p>Forgot password?<a href="{% url 'reset_password' %}"> reset</a></p> {% endcomment %}
-    </span>
-    </form>
+        <br>
+        <div id="btn" class="text-center">
+          <button type="button" class="btn btn-primary btn-circle btn-sm"><i class="fa fa-facebook"></i></button>
+          <a href="{% url 'social:begin' 'google-oauth2' %}">
+            <button type="button" class="btn btn-danger btn-circle btn-sm"><i class="fa fa-google"></i></button></a>
+          <button type="button" class="btn btn-info btn-circle btn-sm"><i class="fa fa-twitter"></i></button>  
+      </div>
+      
+      <span>
+        <p>Don't have an account?  <a href="{% url 'signup' %}"> Sign Up</a></p>
+      </span>
+      <span>
+      {% comment %}<p>Forgot password?<a href="{% url 'reset_password' %}"> reset</a></p> {% endcomment %}
+      </span>
+      </form>
+    </div>
+  <div>
   </div>
-<div>
+</body>
+
 
 {% endblock %}
