--- a/users/static/css/users.css
+++ b/users/static/css/users.css
@@ -1,16 +1,34 @@
+.set-margin{
+    margin-top: 0.2rem;
+}
 #login-card{
     width:350px;
     border-radius: 25px;
     margin:150px auto;
+    border: solid 2px black;
+    background: transparent;
+
   
 }
 
 .input{
     border-radius:30px;
     margin-top: 1rem;
-    background-color: #ebf0fc;
+    background: #a6a7a86e;
     border-color: #ebf0fc;
     color: #9da3b0;
+}
+#id_username{
+    background: #ffffff2a;
+}
+#id_password2{
+    background: #ffffff2a;
+}
+#id_email{
+    background: #ffffff2a;
+}
+#id_password1{
+    background: #ffffff2a;
 }
 
 a {
@@ -44,3 +62,14 @@ a {
             
             margin: 8px;
         }
+
+.text-header{
+    color: #fff;
+}
+span p{
+    font-size: 1rem;
+    color : #fff;
+}
+span a {
+    text-decoration: none;
+}
